--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
     font-size: 23px;
     left: 0px;
     right: 0px;
-    height: 4.5em;
+    height: 17vh;
 }
 
 .esfera{
@@ -83,7 +83,7 @@ nav button {
 }
 
 
-nav button:hover {
+nav>button:hover {
     background-color: #c26e00; 
 }
 
