--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
 }
 h1#theader{
     margin-top:0em;
-    font-size: 2em;
+    font-size: 7vh;
     display: inline-block;
     margin-left: -1.8em;
 }
@@ -73,13 +73,13 @@ nav button {
     text-align: center; 
     text-decoration: none; 
     display: inline-block; 
-    font-size: 16px; 
+    font-size: 2.5vh; 
     border-radius: 5px;
     cursor: pointer; 
     transition: background-color 0.3s; 
     font-weight: bolder;
     margin-top: 2.2em;
-    transform: translateX(-16.5em);
+    transform: translateX(-13.5em);
 }
 
 
