--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@font-face {
+    font-family:'Gameplay' ;
+    src: url(fontes/Gameplay.ttf);
+}
 
 body {
     background-color: #FFFFFF;
@@ -27,8 +31,8 @@ header {
     border-radius: 50%;
     margin-left: 10px;
     margin-top: 0.30em;
-    width: 40px;
-    height: 40px;
+    width: 7vh;
+    height: 7vh;
     color: rgba(255, 255, 255, 0);
     display: flex ;
     align-items: center;
@@ -41,8 +45,8 @@ header {
     background-repeat: no-repeat;
     display: block;
     position: relative;
-    width: 30px;
-    height: 30px;
+    width: 5.5vh;
+    height: 5.5vh;
 }
 .porthon{
     background-image: url(porthon.png);
@@ -51,10 +55,11 @@ header {
     background-image: url(python.png);
 }
 h1#theader{
-    margin-top:0em;
-    font-size: 7vh;
+    margin-top:1vh;
+    font-size: 6vh;
     display: inline-block;
     margin-left: -1.8em;
+    font-family: 'Gameplay';
 }
 nav>ul {
     list-style-type: none;
@@ -62,7 +67,6 @@ nav>ul {
 }
 nav>ul>li {
     display: inline;
-    margin-right: 0.25em;
     margin-left: 0.25em;
 }
 nav button {
@@ -79,7 +83,7 @@ nav button {
     transition: background-color 0.3s; 
     font-weight: bolder;
     margin-top: 2.2em;
-    transform: translateX(-13.5em);
+    transform: translateX(-18vw);
 }
 
 
