--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ h1#theader{
     display: inline-block;
     margin-left: -1.8em;
     font-family: 'Gameplay';
+    text-shadow: 2px 2px 5px #0028ad8a;
 }
 nav>ul {
     list-style-type: none;
@@ -84,6 +85,7 @@ nav button {
     font-weight: bolder;
     margin-top: 2.2em;
     transform: translateX(-18vw);
+    box-shadow: 1px 1px 3px #00155c8a;
 }
 
 
