--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
     width: 100%;
     position: fixed;
     font-size: 23px;
-    height: 17vh;
+    height: 12vh;
     top: 0;
     left: 0;
     z-index: 10;
@@ -61,6 +61,9 @@ h1#theader {
     margin-left: -1.8em;
     font-family: 'Gameplay';
     text-shadow: 2px 2px 5px #0028ad8a;
+}
+.subh1 {
+    color: #0028ad; 
 }
 
 /* --- Menu de navegação --- */
