--- a/style.css
+++ b/style.css
@@ -242,18 +242,18 @@ h1, h2, h3 {
 h1 {
     color: #F08700;
     text-indent: 2em;
-    font-size: 4em;
+    font-size: clamp(2rem, 5vw, 4em);
     font-family: 'Lucida Sans', sans-serif;
 }
 
 h2 {
-    font-size: 3em;
+    font-size: clamp(1.5rem, 4vw, 3em);    
     color: #0028ad;
     text-indent: 0.5em;
 }
 
 h3 {
-    font-size: 2.5em;
+    font-size: clamp(1.2rem, 3.5vw, 2.5em);    
     color: #1789FC;
     text-indent: 0.6em;
 }
