--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     background-color: #FFFFFF;
     font-family: Arial, Helvetica, sans-serif;
     overflow-wrap: break-word;
-    padding-top: 17vh;
 }
 
 /* --- Cabeçalho fixo --- */
@@ -23,11 +22,11 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between; /* Espaço entre marca e menu */
-    padding: 0 2vw;
+    padding: 0 1em;
     width: 100%;
     position: fixed;
     font-size: 23px;
-    height: 12vh;
+    height: 10%;
     top: 0;
     left: 0;
     z-index: 10;
@@ -59,8 +58,8 @@ header {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 7vh;
-    height: 7vh;
+    width: 2em;
+    height: 2em;
     display: block;
     border-radius: 50%;
     cursor: pointer;
@@ -68,8 +67,8 @@ header {
 
 /* --- Título no cabeçalho --- */
 h1#theader {
-    margin-top: 1vh;
-    font-size: 6.5vh;
+    margin-top: 0.15em;
+    font-size: 1.8em;
     display: inline-block;
     margin-left: -1.8em;
     font-family: 'Gameplay';
@@ -96,7 +95,7 @@ nav {
 /* Itens da lista no nav */
 nav > ul {
     display: flex;
-    gap: 1.5vw;
+    gap: 0.5em;
     list-style: none; /* remov bolinhas */
     padding: 0;
     margin: 0;
@@ -116,7 +115,7 @@ nav li {
 .botao-nav, .submenu-item {
     padding: 10px;
     border-radius: 5px;
-    font-size: 2.5vh;
+    font-size: 0.75em;
     text-decoration: none;
     font-weight: bold;
     display: inline-block;
@@ -171,7 +170,8 @@ nav li {
     background-size: 24px 24px;
     padding-left: 40px; 
     color: white;
-    font-size: 2vh;
+    font-size: 0.65em;
+    padding-right: 2em;
 }
 
 .submenu-item.python:hover {
@@ -195,6 +195,7 @@ nav li {
 main {
     margin: 0 0 6.5em 0;
     padding-bottom: 1em;
+    padding-top: 5em;
 }
 
 h1, h2, h3 {
