--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header {
 .brand {
     display: flex;
     align-items: center;
-    gap: 1em;
+    gap: 20px;
 }
 /*---Icones do menu---*/
 .material-symbols-outlined {
@@ -52,14 +52,14 @@ header {
 }
   
 
-/** PEGA SOMENTE QM TEM O ICONE E PORTHON AO MESMO TEMPO */
+/* PEGA SOMENTE QM TEM O ICONE E PORTHON AO MESMO TEMPO */
 .icone.porthon {
     background-image: url('porthon.png'); 
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    width: 2em;
-    height: 2em;
+    width: 50px;
+    height: 50px;
     display: block;
     border-radius: 50%;
     cursor: pointer;
@@ -67,8 +67,8 @@ header {
 
 /* --- Título no cabeçalho --- */
 h1#theader {
-    margin-top: 0.15em;
-    font-size: 1.8em;
+    margin-top: 0.1em;
+    font-size: 45px;
     display: inline-block;
     margin-left: -1.8em;
     font-family: 'Gameplay';
@@ -115,7 +115,7 @@ nav li {
 .botao-nav, .submenu-item {
     padding: 10px;
     border-radius: 5px;
-    font-size: 0.75em;
+    font-size: 20px;
     text-decoration: none;
     font-weight: bold;
     display: inline-block;
@@ -184,7 +184,7 @@ nav li {
     display: none;
     background: none;              /* Remov fundo padrão bom p/ botões */
     border: none;                  /* Remove borda padrão do botão */
-    font-size: 2em;                /* Tam G p/ icon do hamburguer */
+    font-size: 35px;      /*TAMANHO DO HAMBURGUER */          
     color: white;
     cursor: pointer;
     
